# 180DaysOfRust

./: Cargo.toml  LICENSE  README.md
Day_1/src/: main.rs
Day_1/src/models/: functions.rs  mod.rs  print.rs  strings.rs
day_01/src/: main.rs
day_01/src/models/: arrays.rs  cli.rs  functions.rs  loops.rs  mod.rs  strings.rs  types.rs  vector.rs  vectors.rs
day_01_to_day_03/: Cargo.toml
day_01_to_day_03/src/: main.rs
day_01_to_day_03/src/models/: enums.rs  mod.rs  pointer_ref.rs
src/: main.rs
src/day01_to_day03/: arrays.rs  cli.rs  conditionals.rs  enums.rs  functions.rs  loops.rs  mod.rs  pointer_ref.rs  strings.rs  structs.rs  types.rs  vars.rs  vectors.rs
src/day04_to_day06/: borrowing.rs  mod.rs  ownership.rs  shadowing.rs
src/day07_to_day09/: binary_search.rs  bubble_sort.rs  fibonacci.rs  fibonacci_sequence.rs  linear_search.rs  mod.rs  palindrome_checker.rs
src/day10_to_day12/: closures.rs  error_handling.rs  generics.rs  iterators.rs  lifetimes.rs  mod.rs  smart_pointers.rs  traits.rs
src/day13_to_day15/: advanced_concurrency.rs  advanced_lifetimes.rs  advanced_traits.rs  macros.rs  mod.rs  unsafe_rust.rs
src/day16_to_day18/: mod.rs  web_development.rs  web_development_actix.rs  web_development_axum.rs
src/day19_to_day21/: mod.rs  web_development_actix_swaggerui.rs  web_development_axum_swaggerui.rs
src/day22_to_day24/: mod.rs  web_development_axum_swaggerui_postgresql.rs
